# sensorial

./: README.md  application.py  config.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/astronomy/: controller.py  models.py  rule.py
app/business/: geo.py
app/business/astronomy/: controller.py  rule.py
app/business/astronomy/planets/: controller.py  models.py  rule.py
app/business/astronomy/sattelite/: controller.py  models.py  rule.py
app/business/earthquake/: controller.py  models.py  rule.py
app/business/forecast/: controller.py  models.py  rule.py
app/components/aws/: dynamodb.py
environment/dev/: stack.dev.yml  start.sh
environment/dev/back/: Dockerfile  requirements.txt
environment/dev/front/: nginx_default.conf
environment/docker/: Dockerfile  requirements.txt
site/media/js/: app.js
site/templates/: base.html  index.html
static/templates/: base.html  index.html  terms.html
